* Barclays ePDQ: Handle incorrectly encoded response [jordanwheeler, aprofeit]
* Orbital: Bug fixes; add CustomerEmail, Retry Logic, Managed Billing, and Destination Address [juicedM3
* Distinguish invalid vs empty issue_numbers on CreditCards [drasch]
* Float Gemfiles to latest Rails [sanemat]
* USA ePay Advanced: Fix Check support [RyanScottLewis]

== Version 1.32.1 (April 4, 2013)

* CC5 and Garanti: Remove $KCODE modifications [melari]
* Paymill: Add support for store [ntalbott]
* USA ePay: Fix misspelling of "Aduth" [joelvh, ntalbott]
* Orbital: Fix nil address values throwing exceptions during truncation [melari]

== Version 1.32.0 (April 1, 2013)

* Optimal: Submit shipping address with requests [jduff]
* Iridium: Enable reference transactions for authorize [ntalbott]
* Stripe: Add authorize and capture methods [melari]
* Pin: Add a default description if none is specified to fix failures [melari]
* Litle: Add support for passing optional fields in token based transactions [forest]
* Add Finansbank gateway [scamurcuoglu]
* Paymill: Use .com instead of .de for save card url [besi]
* Worldpay integration: Use more robust endpoint urls [nashbridges]
* Braintree Blue: Return CC token in transaction hash [cyu]
* Robokassa: Fix signature for empty amount [ukolovda]
* Worldpay gateway: Fix error messages for some failures [duff]
* Worldpay gateway: Allow settled payments to be refunded [dougal]
* Spreedly: Update urls and terminology [duff]
* Make card brand error more user friendly [oggy]
* DataCash: Update test Mastercard number [jamesshipton]
* DataCash: Update test response fixtures [jamesshipton]
* Pin: Add Pin.js card token support [nagash]
* PayPal Express gateway: Fix error when no address information is in response [pierre]
* Ogone: Use BYPSP for ALIASOPERATION [ntalbott]
* Paymill: Handle error storing card [duff]
* SagePay integration: Add referrer field [melari]
* Pin: Add extra headers [duff]
* Paymill: Add support for store [ntalbott]